feat: add auto send arrival info aprox 45 min before eta

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT = 3000
 AVWX_TOKEN = O4TNdyG7a_hQuQsqzmMYVCG00k6dAFMruRJeTfd2t2Q
+CALLSIGN = NKS
+HOPPIE_LOGON = qWukX5YTFnZvt
+FOOTER = Powered by vSpirit (https://vspirit.io)
