--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "axios": "^0.27.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node-cron": "^3.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "4.17.13"
+    "@types/express": "4.17.13",
+    "@types/node-cron": "^3.0.1",
+    "@types/uuid": "^8.3.4"
   }
 }
