--- a/package.json
+++ b/package.json
@@ -17,11 +17,22 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node-cron": "^3.0.1",
+    "qs": "^6.10.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/node-cron": "3.0.1",
-    "@types/uuid": "8.3.4"
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.0",
+    "typescript": "^4.7.3"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
