feat: add multiple footer lines

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,8 @@ PORT = 3000 # port to run the server on
 AVWX_TOKEN = # AVWX Api Token
 CALLSIGN = NKS # callsign of your station
 HOPPIE_LOGON = # Hoppie Logon Code
-FOOTER = Powered by vSpirit (https://vspirit.io) # footer to display at bottom of transmission
+
+# footer to display at bottom of transmission
+# Up to 5 footer lines are supported
+FOOTER_LN1 = [BETA] Powered by vSpirit 
+FOOTER_LN2 = https://vspirit.io
