--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vspirit-dispatch",
+  "name": "autodispatch",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
