--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vspirit-dispatch",
+  "name": "autodispatch",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "lint": "npx eslint"
   },
   "author": "GoldenXLence",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "dependencies": {
     "axios": "^0.27.2",
     "csv-parser": "^3.0.0",
